Name:                hess
Version:             0.1
Description:
   Haskell Embedded Cascading Style Sheet (CSS).
   .
   It gives the full power of Haskell to define a CSS file, and can be
   either embedded in a haskell program, or can be used externally to
   create tiny standalone programs to generate a css file.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Haskell Embedded Cascading Style Sheet (CSS)
Build-Type:          Simple
Category:            Data
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/hess
data-files:          example.ecss

Library
  Build-Depends:     base >= 3 && < 5, cmdargs
  Exposed-modules:   Hess.Main,
                     Hess.Generate,
                     Hess.Type,
                     Hess.Define,
                     Hess.Selector,
                     Hess.Property
  ghc-options:       -Wall

source-repository head
  type: git
  location: git://github.com/vincenthz/hess
